--- a/includes/header.html
+++ b/includes/header.html
@@ -4,7 +4,7 @@
   <div class="header-container">
     <div class="header-logo">
       <a href="1 Homepage.html" class="logo-link">
-        <img src="10 Assets/Praxis Logos/Praxis Logo New Italic Tagline Navy Transparent BG 1078 x 218.png" alt="Praxis Initiative Logo" class="logo-img" loading="eager">
+        <img src="10 Assets/Praxis Logos/Praxis Logo New Italic Tagline Navy Transparent BG 1078 x 218_1078_218.webp" alt="Praxis Initiative Logo" class="logo-img" loading="eager">
       </a>
     </div>
     <nav class="header-nav">
